--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,87 @@ main{
 }
 
 .right-side{
-    height: 1000px;
     width: 900px;
     background-color: #ebebed;
+    padding: 30px 60px;
 }
+
+.education, .expirience-list, .hobby, .add_information>h1{
+    font-family: Josefin;
+    color: #6D6552;
+}
+
+.education-list, .expirience-list{
+    font-size: 20px;
+    color: #6D6552;
+    font-family: Josefin;
+    line-height: 1.5;
+    margin-bottom: 50px;
+}
+
+.education-list>ul{
+    padding: 0;
+    list-style-type: none;
+}
+
+.education-list>ul>li{
+    margin-bottom: 30px;
+}
+
+.git_exp{
+    display: flex;
+    flex-direction: row;
+    vertical-align: center;
+}
+
+.git_button{
+    text-decoration: none;
+    display: inline-block;
+    color: white;
+    padding: 10px 20px;
+    margin-top: 17px;
+    margin-left: 20px;
+    border-radius: 10px;
+    font-family: Josefin, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8) 0%, rgba(255, 0, 0, 0.8) 51%, rgba(0, 0, 0, 0.8) 100%);
+    background-size: 200% auto;
+    transition: .5s;
+}
+
+.git_button:hover{
+    background-position: right center;
+}
+
+.hobby{
+    margin-bottom: 50px;
+}
+
+.hobby-list{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.hobby_list_games, .hobby_list_books, .hobby_list_cycling, .hobby_list_gym, .hobby_list_swimming{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.hobby_list_games, .hobby_list_books, .hobby_list_cycling, .hobby_list_gym, .hobby_list_swimming, .driving_licence > p{
+    font-size: 20px;
+    color: #6D6552;
+    font-family: Josefin;
+    line-height: 1.5;
+}
+
+.driving_licence{
+    display: inline-flex;
+}
+
+.driving_licence > p{
+    margin-left: 30px;
+}
+
